Update style.css to fix header background image scaling on smaller screens

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header {
     background:
         url("img/nnnoise.svg"),
         url("img/aaabstract.png") no-repeat center center fixed;
+    background-size: contain, cover;
     backdrop-filter: blur(20px);
     text-align: center;
     padding: 2rem 1rem 4rem 1rem;
